--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="poi_detail_fragment_tag">PoiDetailFragment</string>
     <string name="transportation_home_fragment_tag">TransportationHomeFragment</string>
     <string name="flight_list_fragment_tag">FlightListFragment</string>
+    <string name="car_list_fragment_tag">CarListFragment</string>
 
 </resources>
