change wording in nav drawer and add transportation page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,6 @@
     <string name="hotel_detail_fragment_tag">HotelDetailFragment</string>
     <string name="restaurant_detail_fragment_tag">RestaurantDetailFragment</string>
     <string name="poi_detail_fragment_tag">PoiDetailFragment</string>
+    <string name="transportation_home_fragment_tag">TransportationHomeFragment</string>
 
 </resources>
