trip can be saved to database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,6 @@
     <string name="flight_list_fragment_tag">FlightListFragment</string>
     <string name="car_list_fragment_tag">CarListFragment</string>
     <string name="trip_result_fragment_tag">TripResultFragment</string>
+    <string name="trip_detail_fragment_tag">TripDetailFragment</string>
 
 </resources>
